--- a/exercise2.html
+++ b/exercise2.html
@@ -37,19 +37,20 @@ p {
 }
 #subtext {
   color: #FFFFFF;
+  text-align: center;
 }
 #rightSidebar {
   width: 100%;
   box-sizing: border-box;
   float: right;
-  background-color: #FFFFFF;
+  background-color: #fffff0;
 
 }
 #navsidebar {
   width: 100%;
   box-sizing: border-box;
   float: left;
-  background-color: #FFFFFF;
+  background-color: #fffff0;
 
 }
 #mainContent {
@@ -61,7 +62,7 @@ p {
 }
 
 #container1 {
-width: 20%;
+width: 24%;
 float: left;
 
 }
@@ -72,7 +73,7 @@ float: left;
   float: left;
 }
 #container3 {
-  width: 20%;
+  width: 24%;
   float: right;
 }
 
@@ -84,7 +85,7 @@ float: left;
 Use the float, padding, margin, and sizing skills you've practiced to replicate the screenshot with the divs provided below! A few hints:
 <ul>
   <li>Use a <em>fixed</em> width design to keep things simple. More on fluid design next week</li>
-  <li>The colors used were exracted from the image with tineye. They are: #52637B and #FFFAF3</li>
+  <li>The colors used were extracted from the image with tineye. They are: #52637B and #FFFAF3</li>
   <li>Don't forget to either use box-sizing or include padding in your width calculation!</li>
   <li>The other font in the design is called "Lora." It is a google font, and I have included it via link above, you just need to add the necessary font-family properties to your css rules.</li>
 </ul>
@@ -92,8 +93,9 @@ Use the float, padding, margin, and sizing skills you've practiced to replicate 
 <div id="wrapper">
 	<header>
 	   <h1>The Wizard of Oz!</h1>
+     <hr width=50%>
+   </header>
      <div id="subtext"> Allegory for Bi-metalism? Who cares! It's in the Public Domain! </div>
-  </header>
 	<nav>
     <div class="container" id="container1">
     <div id="navsidebar">
